# tdd_python

./: README.md  pyproject.toml
store/: main.py
store/core/: config.py  docker-compose.yml
store/core/schemas/: base.py  product.py
store/db/: mongo.py
store/usecases/: product.py
tests/: conftest.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
